--- a/requirements.txt
+++ b/requirements.txt
@@ -17,17 +17,21 @@ django-storages==1.13.2
 django-widget-tweaks==1.4.12
 graphviz==0.20.1
 gunicorn==20.1.0
+heroku==0.1.4
 idna==3.4
 jmespath==1.0.1
 mysqlclient==2.1.1
+numpy==1.24.2
+pandas==1.5.3
 Pillow==9.4.0
 psycopg==3.1.8
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pydot==1.4.2
 pyparsing==3.0.9
-python-dateutil==1.5
+python-dateutil==2.8.2
 python-decouple==3.7
+pytz==2022.7.1
 requests==2.28.1
 s3transfer==0.6.0
 six==1.16.0
