--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.5.2
+awscli==1.27.74
 boto3==1.26.67
-botocore==1.29.67
+botocore==1.29.74
 certifi==2022.9.24
 charset-normalizer==2.1.1
-colorama==0.4.5
+colorama==0.4.4
 decouple==0.0.7
 dj-database-url==1.2.0
 Django==4.1.1
@@ -15,6 +16,7 @@ django-js-asset==2.0.0
 django-on-heroku==1.1.2
 django-storages==1.13.2
 django-widget-tweaks==1.4.12
+docutils==0.16
 graphviz==0.20.1
 gunicorn==20.1.0
 heroku==0.1.4
@@ -27,12 +29,15 @@ Pillow==9.4.0
 psycopg==3.1.8
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
+pyasn1==0.4.8
 pydot==1.4.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-decouple==3.7
 pytz==2022.7.1
+PyYAML==5.4.1
 requests==2.28.1
+rsa==4.7.2
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.2
