--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.5.2
 awscli==1.27.74
 boto3==1.26.67
-
+botocore==1.29.74
 certifi==2022.9.24
 charset-normalizer==2.1.1
 colorama==0.4.4
@@ -16,6 +16,7 @@ django-js-asset==2.0.0
 django-on-heroku==1.1.2
 django-storages==1.13.2
 django-widget-tweaks==1.4.12
+docopt==0.6.2
 docutils==0.16
 graphviz==0.20.1
 gunicorn==20.1.0
@@ -24,8 +25,9 @@ idna==3.4
 jmespath==1.0.1
 mysqlclient==2.1.1
 numpy==1.24.2
-pandas==1.5.3
+
 Pillow==9.4.0
+pipreqs==0.4.11
 psycopg==3.1.8
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
@@ -45,3 +47,4 @@ typing_extensions==4.4.0
 tzdata==2022.2
 urllib3==1.26.12
 whitenoise==6.3.0
+yarg==0.1.9
