--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.5.2
 awscli==1.27.74
 boto3==1.26.67
-
+botocore==1.29.67
 certifi==2022.9.24
 charset-normalizer==2.1.1
 colorama==0.4.4
@@ -25,7 +25,7 @@ idna==3.4
 jmespath==1.0.1
 mysqlclient==2.1.1
 numpy==1.24.2
-
+pandas==1.5.3
 Pillow==9.4.0
 pipreqs==0.4.11
 psycopg==3.1.8
