--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 awscli==1.27.74
 boto3==1.26.67
+botocore==1.29.74
 certifi==2022.9.24
 charset-normalizer==2.1.1
 colorama==0.4.4
@@ -19,12 +20,10 @@ docopt==0.6.2
 docutils==0.16
 graphviz==0.20.1
 gunicorn==20.1.0
-
 idna==3.4
 jmespath==1.0.1
 mysqlclient==2.1.1
 numpy==1.24.2
-
 Pillow==9.4.0
 pipreqs==0.4.11
 psycopg==3.1.8
@@ -33,8 +32,8 @@ psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pydot==1.4.2
 pyparsing==3.0.9
-
-
+python-dateutil==2.8.2
+python-decouple==3.7
 pytz==2022.7.1
 PyYAML==5.4.1
 requests==2.28.1
@@ -42,6 +41,7 @@ rsa==4.7.2
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.2
+tk==0.1.0
 typing_extensions==4.4.0
 tzdata==2022.2
 urllib3==1.26.12
